--- a/.github/workflows/build-expolrer-db.yaml
+++ b/.github/workflows/build-expolrer-db.yaml
@@ -15,7 +15,8 @@ on:
 
 jobs:
   build:
-    uses: ./.github/workflows/build-docker.yaml
+    uses: bcvouch/gha-workflows/.github/workflows/build-mono.yaml@main
+    secrets: inherit
     with:
       image_name: bcvouch/hlf-explorer-db
       app_name: hlf-explorer-db
