--- a/release-please-config.json
+++ b/release-please-config.json
@@ -2,7 +2,7 @@
   "include-component-in-tag": true,
   "separate-pull-requests": true,
   "packages": {
-    ".": {
+    "app": {
       "release-type": "simple",
       "package-name": "hlf-explorer"
     },
