--- a/release-please-config.json
+++ b/release-please-config.json
@@ -6,7 +6,7 @@
       "release-type": "simple",
       "package-name": "hlf-explorer"
     },
-    ".": {
+    "postgres": {
       "release-type": "simple",
       "package-name": "hlf-explorer-db"
     }
